# burnout-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  azure-pipelines.yml  oas3.yaml
.deploy/: deployment.yml  service.yml
.github/workflows/: deploy-aks.yml  rust.yml
src/: main.rs
src/api/: auth.rs  mod.rs  utils.rs
src/api/health/: get_health.rs  mod.rs
src/api/reports/: get_report.rs  get_reports.rs  mod.rs  new_report.rs  remove_report.rs
src/api/team_assignments/: get_team_assignment.rs  get_team_assignments.rs  mod.rs  remove_team_assignment.rs  store_team_assignment.rs
src/api/teams/: get_team.rs  get_teams.rs  mod.rs  new_team.rs  remove_team.rs  store_team.rs
src/api/test/: mod.rs
src/api/users/: get_user.rs  mod.rs
src/models/: health.rs  mod.rs  report.rs  team.rs  team_assignment.rs  user.rs
src/records/: mod.rs  models.rs  state.rs
src/store/: memory.rs  tablestorage.rs
