[package]
name = "burnout-rs"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
futures = "0.3"
http = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4", "u128" ]}